je change index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <title>Accueil - Robbie Lens Photographie</title>
 </head>
+
 <body>
-
-<div class="center_div">
-  <h1>Hello World Faiz dev!</h1>
-  <p>This example contains some advanced CSS methods you may not have learned yet. But, we will explain these methods in a later chapter in the tutorial.</p>
-</div>
-
+    <!-- Voici mon magnifique commentaire -->
 </body>
+
 </html>
