--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
-<!DOCTYPE html>
-<html lang="fr">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>Accueil - Robbie Lens Photographie</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <!-- Voici mon magnifique commentaire -->
+<title>Ma première page avec du style</title>
+<!-- Contenu principal -->
+<h1>Acceuil  </h1>
+
+<p>Bienvenue 
+
+<!-- Menu de navigation du site -->
+<ul class="navbar">
+  <li><a href="index.html">Home page</a>
+  <li><a href="reflexions.html">Réflexions</a>
+  <li><a href="ville.html">Ma ville</a>
+  <li><a href="liens.html">Liens</a>
+</ul>
+
+
+
+
+
+
+<!-- Signer et dater la page, c'est une question de politesse! -->
+<address>Fait le 25/06/2024<br>
+  </address>
+
 </body>
 
 </html>
