--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
-<!DOCTYPE html>
-<html lang="fr">
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comment crack adobe abrocate</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <title>Ma première page avec du style</title>
+  <link rel="stylesheet" href="assets\css\style.css">
 </head>
+
 <body>
-    <header>
-        <h1>Voyage autour du monde</h1>
-    </header>
-    <main>
-        <section class="parallax" id="parallax1">
-            <div class="overlay">
-                <h2>Bienvenue dans le voyage</h2>
-            </div>
-        </section>
-        <section class="content">
-            <h2>Notre carte interactive</h2>
-            <div id="map"></div>
-        </section>
-        <section class="parallax" id="parallax2">
-            <div class="overlay">
-                <h2>Explorez les leçons</h2>
-            </div>
-        </section>
-        <section class="content">
-            <h2>Contactez-nous</h2>
-            <p>Si vous avez des questions, n'hésitez pas à nous contacter.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Voyage autour du monde. Tous droits réservés.</p>
-    </footer>
-    <script src="script.js"></script>
+
+<!-- Menu de navigation du site -->
+<ul class="navbar">
+  <li><a href="index.html">Home page</a>
+  <li><a href="reflexions.html">Réflexions</a>
+  <li><a href="ville.html">Ma ville</a>
+  <li><a href="liens.html">Liens</a>
+</ul>
+
+<!-- Contenu principal -->
+<h1>Acceuil  </h1>
+
+<p>Bienvenue 
+
+
+
+
 </body>
 </html>
