--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Ma première page avec du style</title>
+    <title>Mad première page avec du style</title>
     <link rel="stylesheet" href="assets\css\style.css">
    </head>
    <body>
